tests/fail/ref_life_bound.stderr
error[E0456]: Object 'b' (lived longer) cannot depend on 'local' (lived shorter)
 --> tests/fail/ref_life_bound.tk:20:11
   |
 20 |         b = Bound(&ref=&local) 
   |           ^
